JetBrains Mono and tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,13 @@
         font-weight: normal;
         font-style: normal;
       }
+
+      @font-face {
+        font-family: "JetBrainsMono";
+        src: url("/fonts/JetBrainsMono-Regular.woff2") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
     </style>
 
     <link rel="icon" href="data:image/svg+xml;utf8,{{ logo }}" />
