--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,9 @@
   /* Typography */
   --body-font: "Bitter", serif;
   --heading-font: "Happy", sans-serif;
-  --base-font-size: calc(1em + 0.32vw);
+  --mono-font: "JetBrainsMono", sans-serif;
+  
+  --base-font-size: calc(0.87em + 0.32vw);
   --line-height: 1.75;
   
   /* Layout */
@@ -134,6 +136,10 @@ h2 {
   line-height: 1.3;
 }
 
+article h1, article h2 {
+  text-transform: capitalize;
+}
+
 h3 {
   font-size: 1.2em;
   margin-top: 40px;
@@ -175,7 +181,7 @@ header {
   position: relative;
   transform: translateY(160px); /* Initial position, offscreen */
   padding-top: 70px;
-  padding-bottom: 55px;
+  padding-bottom: 80px;
   display: flex;
   gap: 20px;
 }
@@ -342,10 +348,12 @@ figcaption {
   margin-top: 10px;
   text-align: center;
   color: var(--meta-color);
+  font-size: 0.7em;
 }
 
 /* Code blocks */
 pre {
+  font-family: var(--mono-font);
   display: block;
   border-radius: var(--border-radius);
   width: calc(100% - 40px);
@@ -353,10 +361,11 @@ pre {
   margin: 30px 0;
   background: var(--surface-color);
   overflow-x: auto;
+
 }
 
 code {
-  font-size: 0.8em;
+  font-family: var(--mono-font);
   padding: 2px;
 }
 
@@ -376,7 +385,8 @@ pre > code {
 pre, code, kbd, samp {
   font-variant-ligatures: none;
   font-feature-settings: normal;
-  font-family: monospace, monospace;
+  font-family: var(--mono-font); 
+  font-size: 0.9em;
 }
 
 /* Blockquotes */
@@ -386,6 +396,14 @@ blockquote {
   margin: 30px 0;
   padding: 10px 20px;
   border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
+
+blockquote > *:last-child {
+  margin-bottom: 0;
+}
+
+blockquote > *:first-child {
+  margin-top: 0;
 }
 
 /* Pagination */
@@ -671,10 +689,6 @@ input:focus::placeholder {
   border-color: var(--border-color);
 }
 
-[data-theme="dark"] blockquote {
-  background: rgba(255, 255, 255, 0.05);
-}
-
 [data-theme="dark"] .logo_font_light {
   display: none;
 }
@@ -708,10 +722,6 @@ input:focus::placeholder {
     border-color: var(--border-color);
   }
 
-  :root:not([data-theme="light"]) blockquote {
-    background: rgba(255, 255, 255, 0.05);
-  }
-  
   :root:not([data-theme="light"]) .logo_font_light {
     display: none;
   }
