more tags for codecrafters

--- a/templates/page.html
+++ b/templates/page.html
@@ -45,10 +45,10 @@
     {% endif %}
   </ul>
 
-  {% if page.taxonomies.tags and "dev" in page.taxonomies.tags %}
-    {% include "snippets/codecrafters.html" %}
+  {% if page.taxonomies.tags and ("dev" in page.taxonomies.tags or "oss" in page.taxonomies.tags or "rust" in page.taxonomies.tags) %}
+      {% include "snippets/codecrafters.html" %}
   {% endif %}
-  
+
   {% if page.extra.credits %} 
     Thanks to  
     {% for credit in page.extra.credits | sort(attribute="name") %}
