--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,51 @@
         font-weight: normal;
         font-style: normal;
       }
+
+        @font-face {
+        font-family: "Merriweather";
+        src: url("/fonts/Merriweather_24pt-Regular.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "Merriweather";
+        src: url("/fonts/Merriweather_24pt-Italic.ttf") format("truetype");
+        font-weight: normal;
+        font-style: italic;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "Merriweather";
+        src: url("/fonts/Merriweather_24pt-Bold.ttf") format("truetype");
+        font-weight: bold;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "Tinos";
+        src: url("/fonts/Tinos-Bold.ttf") format("truetype");
+        font-weight: bold;
+        font-style: normal;
+      }
+
+      @font-face {
+        font-family: "Tinos";
+        src: url("/fonts/Tinos-Italic.ttf") format("truetype");
+        font-weight: normal;
+        font-style: italic;
+      }
+
+      @font-face {
+        font-family: "Tinos";
+        src: url("/fonts/Tinos-Regular.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
     </style>
 
     <link rel="icon" href="data:image/svg+xml;utf8,{{ logo }}" />
