--- a/templates/page.html
+++ b/templates/page.html
@@ -60,6 +60,7 @@
     {% endif %}
     
     <div class="post-meta">
+    <a href="/about">Matthias Endler</a> on
       {%- if page.updated %}
         {{ macros::nicedate(date=page.updated) }}
       {% else %}
