--- a/templates/index.html
+++ b/templates/index.html
@@ -115,8 +115,8 @@
           <div class="logo">{{ logo | safe }}</div>
         </a>
         <div>
-          <h1>Matthias Endler</h1>
-          <h2>{% block header_title %}{% endblock %}</h2>
+          <h1 class="site-title">Matthias Endler</h1>
+          <h2 class="header-title">{% block header_title %}{% endblock %}</h2>
         </div>
       </div>
     </header>
