--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
 :root {
   /* Typography with improved fallbacks */
-  --body-font: "Merriweather", Georgia, "Times New Roman", serif;
+  --body-font: "Bitter", "Merriweather", Georgia, "Times New Roman", serif;
   --heading-font: "Happy", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   --mono-font: "JetBrainsMono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   
@@ -170,7 +170,6 @@ a:hover {
 
 /* Header styling */
 header {
-  position: fixed;
   width: 100%;
   z-index: 1000;
   top: 0;
@@ -276,8 +275,8 @@ main article {
   padding: 0.4em;
   border-radius: 2em;
   cursor: pointer;
-  width: 2.5em;
-  height: 2.5em;
+  min-width: 2.5em;
+  min-height: 2.5em;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -635,13 +634,6 @@ footer .body {
   }
 }
 
-/* Mobile styles */
-@media (max-width: 500px) {
-  .post-author,
-  .post-date {
-    display: none;
-  }
-}
 
 @media (max-width: 920px) {
   .container {
@@ -672,6 +664,10 @@ footer .body {
   .article-header {
     margin-top: 1em;
     margin-bottom: 1em;
+  }
+
+  .post-meta {
+    display: none;
   }
   
   pre {
