--- a/templates/page.html
+++ b/templates/page.html
@@ -48,7 +48,7 @@
 {%- endblock header -%}
 
 {%- block site_header %}
-<header>
+<header style="position: fixed">
   <div class="site-header">
     <a href="/" aria-label="Go back to homepage">
       <div class="logo">{{ logo | safe }}</div>
@@ -57,6 +57,39 @@
       <h1 class="site-title">Matthias Endler</h1>
       <h2 class="header-title">{{ page.title }}</h2>
     </div>
+
+      <button
+        onclick="toggleTheme()"
+        class="theme-toggle"
+        aria-label="Toggle dark mode"
+      >
+        <svg
+          class="sun-icon"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <circle cx="12" cy="12" r="5"></circle>
+          <line x1="12" y1="1" x2="12" y2="3"></line>
+          <line x1="12" y1="21" x2="12" y2="23"></line>
+          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+          <line x1="1" y1="12" x2="3" y2="12"></line>
+          <line x1="21" y1="12" x2="23" y2="12"></line>
+          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+        </svg>
+        <svg
+          class="moon-icon"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+        </svg>
+      </button>
   </div>
 </header>
 {%- endblock site_header %}
@@ -121,7 +154,7 @@
     <script>
       // Header animation
       const headerWrapper = document.querySelector(".site-header");
-      const startOffset = 180;
+      const startOffset = 190;
 
       function updateHeaderPosition() {
         const scrollPos = window.scrollY;
