--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
           <div class="logo">{{ logo | safe }}</div>
         </a>
         <div>
-          <h1 class="site-title">Matthias Endler</h1>
+          <h1 class="homepage-title">Matthias Endler</h1>
         </div>
 
           <button
