--- a/templates/page.html
+++ b/templates/page.html
@@ -54,7 +54,7 @@
       <div class="logo">{{ logo | safe }}</div>
     </a>
     <div>
-      <h1 class="site-title">Matthias Endler</h1>
+      <h1>Matthias Endler</h1>
       <h2 class="header-title">{{ page.title }}</h2>
     </div>
 
