--- a/static/css/main.css
+++ b/static/css/main.css
@@ -138,7 +138,7 @@ h3 {
 
 /* Links */
 a {
-  color: var(--text-color);
+  color: var(--accent-color); 
   text-decoration-color: var(--accent-color);
   text-decoration-thickness: 2px;
   text-underline-offset: 0.2em;
@@ -157,7 +157,6 @@ a:hover {
 
 @media (prefers-color-scheme: dark) {
   :root:not([data-theme="light"]) a {
-    color: #fff;
     text-decoration-color: var(--accent-color);
   }
 }
@@ -175,6 +174,18 @@ header {
   left: 0;
   overflow: hidden;
   background-color: var(--background);
+}
+
+.homepage-header {
+  align-items: center;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  position: relative;
+  padding: 70px 0 100px;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  font-size: 0.9em;
 }
 
 .site-header {
@@ -516,17 +527,18 @@ th {
 }
 
 .homepage a.title {
+  text-decoration: none;
+}
+
+.homepage a.title:hover {
+  text-decoration: underline dotted;
   text-decoration-thickness: 3px;
   text-underline-offset: 4px;
+  text-decoration-color: var(--accent-color);
 }
 
 .excerpt {
   margin: 10px 0;
-}
-
-.excerpt a {
-  color: var(--accent-color);
-  text-decoration: none;
 }
 
 /* Post links and social */
