--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
   <body>
     {%- block site_header %}
     <header>
-      <div class="site-header">
+      <div class="homepage-header">
         <a href="/" aria-label="Go back to homepage">
           <div class="logo">{{ logo | safe }}</div>
         </a>
