--- a/static/css/main.css
+++ b/static/css/main.css
@@ -210,6 +210,11 @@ header {
   height: 50px;
 }
 
+.homepage-header .logo {
+  width: 80px;
+  height: 80px;
+}
+
 header h1 {
   font-family: 'Happy-Headline';
   font-size: 1.2em;
