--- a/templates/index.html
+++ b/templates/index.html
@@ -19,22 +19,18 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="canonical" href="{{ current_url | safe }}" />
     <link rel="me" href="https://mastodon.social/@mre" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
 
     <style>
       @font-face {
         font-family: "Happy-Headline";
-        src: url("/fonts/Happy-Headline.ttf") format("truetype");
+        src: url("/fonts/Happy-Headline.woff2") format("woff2"); 
         font-weight: normal;
         font-style: normal;
       }
 
       @font-face {
         font-family: "Happy";
-        src: url("/fonts/Happy.ttf") format("truetype");
+        src: url("/fonts/Happy.woff2") format("woff2");
         font-weight: normal;
         font-style: normal;
       }
@@ -46,49 +42,29 @@
         font-style: normal;
       }
 
-        @font-face {
-        font-family: "Merriweather";
-        src: url("/fonts/Merriweather_24pt-Regular.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
+
+      @font-face {
         font-display: swap;
+        font-family: 'Merriweather';
+        font-style: normal;
+        font-weight: 400;
+        src: url('/fonts/merriweather-v31-latin-regular.woff2') format('woff2');
       }
 
       @font-face {
-        font-family: "Merriweather";
-        src: url("/fonts/Merriweather_24pt-Italic.ttf") format("truetype");
-        font-weight: normal;
+        font-display: swap;
+        font-family: 'Merriweather';
         font-style: italic;
+        font-weight: 400;
+        src: url('/fonts/merriweather-v31-latin-italic.woff2') format('woff2');
+      }
+
+      @font-face {
         font-display: swap;
-      }
-
-      @font-face {
-        font-family: "Merriweather";
-        src: url("/fonts/Merriweather_24pt-Bold.ttf") format("truetype");
-        font-weight: bold;
-        font-style: normal;
-        font-display: swap;
-      }
-
-      @font-face {
-        font-family: "Tinos";
-        src: url("/fonts/Tinos-Bold.ttf") format("truetype");
-        font-weight: bold;
-        font-style: normal;
-      }
-
-      @font-face {
-        font-family: "Tinos";
-        src: url("/fonts/Tinos-Italic.ttf") format("truetype");
-        font-weight: normal;
-        font-style: italic;
-      }
-
-      @font-face {
-        font-family: "Tinos";
-        src: url("/fonts/Tinos-Regular.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
+        font-family: 'Merriweather';
+        font-style: bold;
+        font-weight: 700;
+        src: url('/fonts/merriweather-v31-latin-700.woff2') format('woff2');
       }
     </style>
 
