--- a/templates/page.html
+++ b/templates/page.html
@@ -54,7 +54,9 @@
       <div class="logo">{{ logo | safe }}</div>
     </a>
     <div>
-      <h1>Matthias Endler</h1>
+      <a href="/">
+        <h1>Matthias Endler</h1>
+      </a>
     </div>
   </div>
 </header>
