--- a/templates/index.html
+++ b/templates/index.html
@@ -88,9 +88,13 @@
     {%- block site_header %}
     <header>
       <div class="homepage-header">
+        <a href="/" aria-label="Go back to homepage">
           <div class="logo">{{ logo | safe }}</div>
+        </a>
         <div>
-          <h1 class="homepage-title">Matthias Endler</h1>
+          <a href="/" aria-label="Go back to homepage">
+            <h1 class="homepage-title">Matthias Endler</h1>
+          </a>
         </div>
 
           <button
