personalize about section

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -5,19 +5,18 @@
         <img class="footer-author-photo" src="/about/matthias-endler.jpg" alt="Matthias Endler" />
       </a>
       <div class="footer-author-text">
-        Hello, I'm <a href="/about">Matthias</a>.
+        Servus, I'm <a href="/about">Matthias</a>.
       </div>
     </div>
     
     <div>
       <p>
-        I mostly write about software development, Rust and
+        A developer from Bavaria, Germany, mostly writing about software development, Rust and
         open-source.
-        For more info, check out my
-        <a href="/about">about page</a>.
+        There's more info on my <a href="/about">about page</a>.
       </p>
       <p>
-        For other posts, you can check out my
+        For more posts, you can check out my
         <a href="/archive">blog archive</a>.
 
         If you would like to receive future posts
