typos and formatting for footer

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -11,20 +11,19 @@
     
     <div>
       <p>
-        A developer from Bavaria, Germany, mostly writing about software development, Rust and
+        A developer from Bavaria, Germany, mostly writing about software development, Rust, and
         open-source.
         There's more info on my <a href="/about">about page</a>.
       </p>
       <p>
         For more posts, you can check out my
         <a href="/archive">blog archive</a>.
-
         If you would like to receive future posts
         automatically, you can subscribe to my
         <a href="/rss.xml">RSS feed</a>.
       </p>
 
-    {% include "snippets/social.html" %}
+      {% include "snippets/social.html" %}
     </div>
   </div>
 </footer>
