--- a/static/css/main.css
+++ b/static/css/main.css
@@ -614,7 +614,6 @@ footer .body {
 .social-icons ul {
   display: inline-block;
   padding-left: 0;
-  margin-top: 0;
 }
 
 .social-icons li {
@@ -739,15 +738,13 @@ footer .body {
 
 .footer-author-text a {
   color: var(--accent-color);
-  text-decoration: none;
-  transition: color 0.2s ease;
 }
 
 .footer-author-text a:hover {
   color: var(--accent-color);
   text-decoration: underline dotted;
   text-decoration-thickness: 2px;
-  text-decoration-color: var(--accent-color);
+  text-decoration-color: var(--text-color);
 }
 
 @media (max-width: 920px) {
